# profile.ivi.ico-uxf-device-input-controller

./: Makefile.am  configure.ac  egalax_calibration.conf  groups  joystick_gtforce.conf  project.config
gtforce/: Makefile.am  ico_dic-gtforce.c  ico_dic-gtforce.h  ico_dic-wayland.c
joystick_gtforce/: Makefile.am  dbg_curtime.c  ico_ictl-joystick.c  ico_ictl-local.h  ico_ictl-wayland.c
packaging/: ico-uxf-device-input-controller.changes  ico-uxf-device-input-controller.spec
settings/: drivingforcegt.conf  g27racingwheel.conf  ico-device-input-controller.service  ico-dic-wait-weston-ready.path  set_daynight.sh  set_navi_busguide.sh  set_navi_destination.sh
tests/: Makefile.am  input-controller-test  input-controller-test.G25  test-client.c  test-common.c  test-common.h  test-homescreen.c  test-send_event.c  weston.ini
tests/testdata/: drivingforcegt.conf  g27racingwheel.conf  set_daynight.sh
touch_egalax/: Makefile.am  ico_ictl-egalax_calibration.c  ico_ictl-touch_egalax.c  ico_ictl-touch_egalax.h
